# libglyphicons

./: CMakeLists.txt  LICENSE  README.md
include/glyphicons/: glyphicons.h
src/: glyphicons.c
tests/: CMakeLists.txt  test_glyphicons.c  test_glyphicons.cxx
